--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,10 @@
   text-align: center;
 }
 
+#userInput {
+  width: 330px;
+}
+
 input {
   padding: 15px;
   margin: 3px;
@@ -22,10 +26,6 @@ input {
   width: 35px;
 }
 
-#userInput {
-  width: 330px;
-}
-
 h1 {
   font-weight: bolder;
   font-size: 3rem;
@@ -33,7 +33,7 @@ h1 {
 }
 
 h3 {
-  margin-bottom: 0em;
+  margin: 0em;
 }
 
 p {
@@ -48,4 +48,12 @@ p {
   background-color: white;
   padding: 0.5rem;
   margin: 0.5rem;
+}
+
+#win {
+  background-color: rgb(73, 130, 73);
+  color: white;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  margin-top: 1.5rem;
 }
