--- a/src/App.css
+++ b/src/App.css
@@ -52,3 +52,11 @@ p {
 #rules {
   margin-bottom: 1rem;
 }
+
+#win {
+  background-color: rgb(73, 130, 73);
+  color: white;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  margin-top: 1.5rem;
+}
