--- a/src/App.css
+++ b/src/App.css
@@ -2,13 +2,14 @@
   background-color: rgba(255, 255, 255, 0.25);
   backdrop-filter: blur(10px);
   border-radius: 1rem;
-  margin: 1rem;
+  max-width: 36rem;
+  margin: 2rem auto;
   padding: 1rem;
   text-align: center;
 }
 
 #userInput {
-  width: 330px;
+  width: 333px;
 }
 
 input {
@@ -23,8 +24,8 @@ input {
 }
 
 #letterTile {
-  width: 60px;
-  height: 60px;
+  width: 62px;
+  height: 62px;
 }
 
 h1 {
